2006-04-24  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas: Regen (drop-shadow options).

	* configure.ac: xrender 0.9, required for g-w-d.

	* gnome/window-decorator/gnome-window-decorator.c:
	* plugins/decoration.c: Add configurable drop-shadows. A minor issue is
	that shadows around "tiny" windows are not rendered correctly when
	large shadow offsets are used. Solution is to have the decorator set
	a minimum size for which a decoration can be used so that no shadows
	are rendered around "tiny" windows.

2006-04-20  Dan Winship  <danw@novell.com>

	* plugins/rotate.c: add 12 go-directly-to-cube-face and 12
	go-directly-to-cube-face-with-window bindings.

	* src/display.c (compDisplayInitOptions): fix the binding type on
	WINDOW_MENU.

	* plugins/compiz.schemas: Regen. (lower_window, window_menu,
	scale_image, images, resize, flip_move, move_window_types, and the
	new rotate bindings)

2006-04-20  David Reveman  <davidr@novell.com>

	* src/window.c:
	* src/event.c (handleEvent):
	* src/display.c:
	* include/compiz.h:
	* gnome/window-decorator/gnome-window-decorator.c: Add force quit
	dialog.

	* plugins/resize.c: Changed default binding to Button2.

	* src/display.c (LOWER_WINDOW_BUTTON_DEFAULT): Button2 -> 6.

	* gnome/window-decorator/gnome-window-decorator.c:
	* include/compiz.h:
	* src/event.c (handleEvent):
	* src/display.c: Add window menu binding.

	* gnome/window-decorator/gnome-window-decorator.c: Pick up toolkit
	actions from compiz and send gnome panel actions for "main menu" and
	"run dialog" actions.

	* src/event.c (handleEvent):
	* src/screen.c:
	* include/compiz.h:
	* src/display.c (addDisplay): panel action -> toolkit action.

	* src/window.c (getModalTransient): Group transient must not be an
	ancestor to the window we've currently found as the window to focus.
	(getModalTransient): Check for child modal transient.

2006-04-19  David Reveman  <davidr@novell.com>

	* gnome/compiz-window-manager.c: Be nice to gnome-theme-manager